<resources>
    <string name="app_name">KawaishiRyuAppNew</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- FragLoginOrRegister -->
    <string name="NameApp">Kawaishi Ryu App</string>
    <string name="tv1">Jiu Jitsu-Judo</string>
    <string name="tv2">Explora sobre las técnicas de Jiu Jitsu y Judo en Salta, Argentina, y obtén detalles acerca de los dojos donde puedes aprender y perfeccionar estas disciplinas.</string>
    <string name="stUsuario">Usuario</string>
    <string name="stPassword">Contraseña</string>
    <string name="stRegistrarme">Registrarme</string>
    <string name="st_iniciar_sesion">Iniciar Sesion</string>
    <string name="frase_registro">Crea una cuenta y adentrate en el mundo del Jiu Jitsu y Judo\n</string>

    <!-- RegisterFragment -->
    <string name="st_completar_datos">COMPLETAR DATOS</string>
    <string name="stNombre">Nombre</string>
    <string name="stApellido">Apellido</string>
    <string name="email">Email@</string>
    <string name="st_password_rep">Repita contraseña</string>
    <string name="st_politic1">He leído las políticas de privacidad.</string>
    <string name="st_soy_mayor_de_13_a_os">Soy mayor de 13 años</string>
    <string name="st_registrate">Registrate</string>

    <!-- Item location -->
    <string name="st_nombre_del_dojo">Nombre del dojo</string>
    <string name="st_sensei_a_cargo">Sensei a cargo</string>
    <string name="st_editar">Editar</string>
    <string name="st_eliminar">Eliminar</string>

    <!-- RegisterLocationFragment -->
    <string name="st_horario">Horario</string>
    <string name="st_lista_de_horarios">Lista de horarios</string>
    <string name="st_disciplina">Disciplina</string>
    <string name="st_lunes">Lunes</string>
    <string name="st_martes">Martes</string>
    <string name="st_miercoles">Miercoles</string>
    <string name="st_jueves">Jueves</string>
    <string name="st_viernes">Viernes</string>
    <string name="st_sabado">Sabado</string>
    <string name="st_hora_de_entrada">Hora de entrada</string>
    <string name="_00_00">00:00</string>
    <string name="st_hora_de_salida">Hora de salida</string>
    <string name="st_agregar_horario">Agregar Horario</string>
    <string name="st_subir_horarios">Subir horarios</string>

    <!-- ProfileEditUser -->
    <string name="st_cuenta">Cuenta:</string>
    <string name="st_email">Email@:</string>
    <string name="st_nombre">Nombre:</string>
    <string name="st_apellido">Apellido:</string>
    <string name="st_editar_perfil">Editar Perfil</string>
    <string name="st_cuenta2">Cuenta:</string>

    <!-- Item_menu_tec -->
    <string name="st_jiu_jitsu">Jiu jitsu</string>
    <string name="st_traducir">Traducir</string>
    <string name="st_hecho">Hecho</string>

    <!-- menuNavDrawer -->
    <string name="st_inicio">Inicio</string>
    <string name="st_menu_principal">Menu principal</string>
    <string name="st_tecnicas_jiu_jitsu">Tecnicas Jiu Jitsu</string>
    <string name="st_tecnicas_judo">Tecnicas Judo</string>
    <string name="st_ubicaciones_de_dojos">Ubicaciones de dojos</string>
    <string name="st_perfil_de_usuario">Perfil de usuario</string>
    <string name="st_perfil">Perfil</string>
    <string name="st_cerrar_sesion">Cerrar sesion</string>
    <string name="st_header"><![CDATA[Kawaishi Ryu Jiu jitsu & Judo desde 1974 en Argentina]]></string>
    <string name="open_nav">open\n</string>
    <string name="close_nav">close\n</string>


</resources>