<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/CommonLinearLayoutStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.location.RegisterLocationFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/linearLayout12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv1"
                style="@style/CommonCardViewStyle"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/st_horario"
                    android:textAlignment="center"
                    android:textColor="@color/C1"
                    android:textSize="21sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tvInp"
                app:boxBackgroundColor="@color/C7"
                app:counterEnabled="true"
                app:counterMaxLength="19"
                app:counterTextColor="@color/C1"
                app:errorEnabled="true"
                app:hintTextColor="@color/C1"
                style="@style/CommonTextInputLayout2"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDisiplina"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/st_disciplina"
                    android:inputType="text"
                    android:maxLength="19" />
            </com.google.android.material.textfield.TextInputLayout>


            <androidx.cardview.widget.CardView
                android:id="@+id/cv2"
                app:cardCornerRadius="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/C7">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroup"
                    app:singleSelection="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_1"
                        style="@style/CustomChip"
                        app:closeIconVisible="false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:elevation="8dp"
                        android:text="@string/st_lunes"
                        android:textColor="@color/C2" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_2"
                        style="@style/CustomChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/st_martes"
                        android:textColor="@color/C2"

                        />

                    <com.google.android.material.chip.Chip
                        style="@style/CustomChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/st_miercoles"
                        android:textColor="@color/C2" />

                    <com.google.android.material.chip.Chip
                        style="@style/CustomChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/st_jueves"
                        android:textColor="@color/C2" />

                    <com.google.android.material.chip.Chip
                        style="@style/CustomChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/st_viernes"
                        android:textColor="@color/C2" />

                    <com.google.android.material.chip.Chip
                        style="@style/CustomChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/st_sabado"
                        android:textColor="@color/C2" />

                </com.google.android.material.chip.ChipGroup>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv3"
                app:cardCornerRadius="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                style="@style/CommonCardViewStyle"
                >
                <!-- Primera fila: Botón y TextView -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <!-- Primera fila: Botón y TextView -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnEntrada"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/C2"
                            android:elevation="0dp"
                            android:text="@string/st_hora_de_entrada"
                            android:textColor="@color/C1" />

                        <TextView
                            android:id="@+id/tvEntrada"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="15dp"
                            android:layout_weight="@integer/material_motion_duration_long_1"
                            android:text="@string/_00_00"
                            android:textAlignment="textEnd"
                            android:textColor="@color/C1"
                            android:textSize="24sp"
                            android:textStyle="bold" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnSalida"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/C2"
                            android:elevation="0dp"
                            android:text="@string/st_hora_de_salida"
                            android:textColor="@color/C1" />

                        <TextView
                            android:id="@+id/tvSalida"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="15dp"
                            android:layout_weight="@integer/material_motion_duration_long_1"
                            android:text="@string/_00_00"
                            android:textAlignment="textEnd"
                            android:textColor="@color/C1"
                            android:textSize="24sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv4"
                app:cardCornerRadius="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/C7">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/st_lista_de_horarios"
                        android:textAlignment="center"
                        android:textColor="@color/C1"
                        android:textSize="21sp"
                        android:textStyle="bold" />

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="150dp">

                        <TextView
                            android:id="@+id/tvList"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:text="@string/st_horario"
                            android:textAlignment="center"
                            android:textColor="@color/C6"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </ScrollView>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnAgregarHorario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:backgroundTint="@color/C2"
                        android:text="@string/st_agregar_horario"
                        android:textAlignment="center"
                        android:textColor="@color/C1"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv5"
                app:cardCornerRadius="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/C7">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSubirHorarios"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/C2"
                    android:text="@string/st_subir_horarios"
                    android:textAlignment="center"
                    android:textColor="@color/C1"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>


</LinearLayout>