<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CommonLinearLayoutStyle"
    tools:context=".ui.fragment.login.RegisterFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv1"
        style="@style/CommonCardViewStyle"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/titleRegisterUser"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:layout_marginHorizontal="18dp"
            android:maxLines="@integer/material_motion_duration_long_1"
            android:text="@string/frase_registro"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv2"
        style="@style/CommonCardViewStyle"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            style="@style/LinearLayoutBasico">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/st_completar_datos"
                android:textAlignment="center"
                android:textColor="@color/C6"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/CommonTextInputLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextInputEditText2"
                    android:id="@+id/etNombre"
                    android:hint="@string/stNombre"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/CommonTextInputLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextInputEditText2"
                    android:id="@+id/etApellido"
                    android:hint="@string/stApellido"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/CommonTextInputLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextInputEditText2"
                    android:id="@+id/etEmail"
                    android:hint="@string/email"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tvInpLPassword"
                style="@style/CommonTextInputLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:helperText="Ingresa la contraseña">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextInputEditText2"
                    android:id="@+id/etPassword"
                    android:hint="@string/stPassword"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/CommonTextInputLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:helperText="Repita la contraseña">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextInputEditText2"
                    android:id="@+id/etRepPassword"
                    android:hint="@string/st_password_rep"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/tvPolPriv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/C2"
                    android:gravity="center"
                    android:padding="7dp"
                    android:text="@string/st_politic1"
                    android:textAlignment="inherit"
                    android:textColor="@color/C1"
                    android:textSize="12sp"
                    android:textStyle="normal"
                    app:strokeColor="@color/C1"
                    app:strokeWidth="2dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvAge"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/st_soy_mayor_de_13_a_os"
                    android:textAlignment="inherit"
                    android:textColor="@color/C1"
                    android:textSize="18sp"
                    android:textStyle="normal" />
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:backgroundTint="@color/C1"
        app:cardCornerRadius="15dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvRegistrarse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/st_registrate"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/circularProgressIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="82dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:indeterminate="true"
                android:indeterminateTint="@color/C1"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvWaiting"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="Espera unos segundos"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/circularProgressIndicator"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/st_hecho"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


</LinearLayout>