<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="8dp"
        app:cardBackgroundColor="@color/C7"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="120dp">

            <TextView
                android:id="@+id/tvNameDojo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="16dp"
                android:text="@string/st_nombre_del_dojo"
                android:textColor="@color/C6"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvSenseiName"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="8dp"
                android:text="@string/st_sensei_a_cargo"
                android:textColor="@color/C6"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/tvNameDojo"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvNameDojo" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayoutCompat"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSenseiName">

                <ImageView
                    android:layout_marginBottom="5dp"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/icon_ig" />

                <ImageView
                    android:layout_marginBottom="5dp"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/icon_wpp" />

                <ImageView
                    android:layout_marginBottom="5dp"
                    android:id="@+id/googleMapsLocationDojo"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/icon_mapa" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bt_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="@integer/material_motion_duration_long_1"
                    android:backgroundTint="@color/C1"
                    android:text="@string/st_editar"
                    android:textColor="@color/C2" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bt_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="@integer/material_motion_duration_long_1"
                    android:backgroundTint="@color/C1"
                    android:text="@string/st_eliminar"
                    android:textColor="@color/C2" />

            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivPhotoDojo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@null"
        android:elevation="16dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher"
        app:civ_border_color="@color/C1"
        app:civ_border_width="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</FrameLayout>